--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -1,78 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <!-- NEED TO: change the textview/imageview pairs according to what the current and next workouts
     are in the routine-->
 
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|top"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/workoutCurrExercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="Crunches"
             android:textSize="30dp" />
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left|top"
-            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageViewCurrExercise"
                 android:layout_width="200dp"
-                android:layout_height="200dp" />
+                android:layout_height="200dp"
+                android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
 
-            <LinearLayout
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left|top"
+        android:layout_marginBottom="30dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/workoutCurrExerciseEndTimeText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="@string/currExerciseEndTime"
+                android:textSize="22dp" />
 
-                <TextView
-                    android:id="@+id/workoutCurrExerciseEndTimeText"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/currExerciseEndTime"
-                    android:textSize="22dp" />
-
-                <TextView
-                    android:id="@+id/workoutCurrExerciseEndTimeNumber"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20dp" />
-            </LinearLayout>
-
+            <TextView
+                android:id="@+id/workoutCurrExerciseEndTimeNumber"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textSize="20dp" />
         </LinearLayout>
+
+
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="191dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:textSize="72dp" />
+
+        <Button
+            android:id="@+id/buttonPause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|center_vertical"
+            android:onClick="onPauseClicked"
+            android:layout_weight="1"
+            android:text="@string/pauseButtonText" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
-        android:layout_marginBottom="60dp"
+        android:background="#00000000"
+        android:layout_marginBottom="5dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/workoutNextExercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="Side Plank"
             android:textSize="24dp" />
 
         <ImageView
             android:id="@+id/imageViewNextExercise"
             android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
 
@@ -104,21 +132,4 @@
             android:text="@string/endEarlyWorkoutButton" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonPause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|center_vertical"
-        android:onClick="onPauseClicked"
-        android:text="@string/pauseButtonText" />
-
-    <Chronometer
-        android:id="@+id/chronometer"
-        android:layout_width="191dp"
-        android:layout_height="69dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textSize="48dp" />
-
-
-</FrameLayout>
+</LinearLayout>
