--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -43,7 +43,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:textSize="18dp"
-                android:text="@string/rectusText" />
+                android:text="@string/rectusText"
+                android:textColor="#ed0c0c" />
 
             <TextView
                 android:id="@+id/textViewStatsLevelRectus"
@@ -51,7 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:textSize="18dp"
-                android:text="@string/initialStatsLevel" />
+                android:text="@string/initialStatsLevel"
+                android:textColor="#ed0c0c" />
         </LinearLayout>
 
         <LinearLayout
@@ -59,7 +61,6 @@
             android:layout_height="fill_parent"
             android:layout_gravity="left|top"
             android:orientation="horizontal"
-            android:textSize="18dp"
             android:background="#00000000">
 
             <TextView
@@ -68,14 +69,17 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:textSize="18dp"
-                android:text="@string/obliqueText" />
+                android:text="@string/obliqueText"
+                android:textColor="#32f018" />
 
             <TextView
                 android:id="@+id/textViewStatsLevelOblique"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
-                android:text="@string/initialStatsLevel" />
+                android:textSize="18dp"
+                android:text="@string/initialStatsLevel"
+                android:textColor="#32f018" />
         </LinearLayout>
 
         <LinearLayout
@@ -83,7 +87,6 @@
             android:layout_height="fill_parent"
             android:layout_gravity="left|top"
             android:orientation="horizontal"
-            android:textSize="18dp"
             android:background="#00000000">
 
             <TextView
@@ -92,7 +95,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|top"
                 android:textSize="18dp"
-                android:text="@string/transverseText" />
+                android:text="@string/transverseText"
+                android:textColor="#f4f714" />
 
             <TextView
                 android:id="@+id/textViewStatsLevelTransverse"
@@ -100,9 +104,30 @@
                 android:layout_height="wrap_content"
                 android:textSize="18dp"
                 android:layout_gravity="left|top"
-                android:text="@string/initialStatsLevel" />
+                android:text="@string/initialStatsLevel"
+                android:textColor="#f4f714"
+                android:textIsSelectable="false" />
         </LinearLayout>
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageViewRectus"
+        android:background="#00000000"
+        android:layout_gravity="center" />
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageViewTransverse"
+        android:background="#00000000"
+        android:layout_gravity="center" />
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/imageViewObliques"
+        android:background="#00000000"
+        android:layout_gravity="center" />
 
 
 </FrameLayout>
