--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -10,17 +10,8 @@
         android:layout_height="fill_parent"
         android:id="@+id/listViewHistory"
         android:background="#00000000"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginBottom="180dp" />
+        android:layout_gravity="center_horizontal|top" />
 
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_marginBottom="80dp"
-        android:layout_height="80dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:text="@string/showStatsButtonText"
-        android:id="@+id/buttonShowStats"
-        android:layout_gravity="center_horizontal|bottom" />
+
 
 </FrameLayout>
