--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -11,6 +11,13 @@
         android:layout_margin="5dp"
         android:background="#00000000">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="left|top"
+        android:orientation="horizontal"
+        android:background="#00000000">
+
         <TextView
             android:id="@+id/textViewStatsLevels"
             android:layout_width="wrap_content"
@@ -18,6 +25,13 @@
             android:layout_gravity="left|top"
             android:text="@string/statsLevelsText"
             android:textSize="20dp" />
+        <TextView
+            android:id="@+id/textViewStatsLevelsTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|top"
+            android:textSize="20dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
